--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
+    "react-swipeable-views": "^0.14.0",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
