--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.1",
+    "react-speech-recognition": "^3.10.0",
     "react-swipeable-views": "^0.14.0",
     "zustand": "^4.3.8"
   },
