--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,12 @@
     "@mui/styles": "^5.13.2",
     "@mui/x-charts": "^6.0.0-alpha.10",
     "axios": "^1.4.0",
+    "i18next": "^23.5.1",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.1",
     "react-speech-recognition": "^3.10.0",
