--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,14 @@
 {
+	"type": "module",
 	"dependencies": {
-		"express": "^4.18.2",
+		"@prisma/client": "^5.3.1",
+		"bcrypt": "^5.1.1",
 		"cors": "^2.8.5",
-		"@prisma/client": "^5.3.1"
+		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.2"
+	},
+	"devDependencies": {
+		"dotenv": "^16.3.1",
+		"prisma": "^5.3.1"
 	}
 }
